# orphy

./: Cargo.toml  README.md
src/: cli.rs  mail.rs  main.rs
