[package]
name = "orphy"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.19", features = ["blocking"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
chrono = "0.4.41"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
cli-table = "0.5"
